# CC3501

./: .gitignore  README.md  lab5 check.txt  token
Arm/: Client.py  Client_jog.py  Client_key.py  Dummy_Code.py  Server.py  assignment_2.py  close_socket.py  main.py  pickandplace.py  pyniryo_test.py
Arm/Client_Scripts/: Client.py  Client_jog.py  Client_traj.py
Arm/Niryo_Examples/: close_socket.py
Arm/drivers/Client/: CMakeLists.txt  Client.cpp  Client.h
Arm/drivers/Helper/: Helper.cpp  Helper.h
Arm/drivers/LSM9DS1/: CMakeLists.txt  Fusion.h  FusionArhs.cpp  FusionArhs.h  FusionAxes.h  FusionCalibration.h  FusionCompass.cpp  FusionCompass.h  FusionConvention.h  FusionOffset.h  LSM9DS1.cpp  LSM9DS1.h  LSM9DS1_driver.cpp  LSM9DS1_driver_old.h  main.cpp
Arm/drivers/LSM9DS1/SensorFusion/: FusionMath.h  FusionOffset.cpp
Arm/drivers/LSM9DS1_driver/: LSM9DS1_driver.cpp
Arm/drivers/PiCameraDetection/: CMakeLists.txt  PiCameraDetection.cpp  PiCameraDetection.h
Arm/drivers/Sensor Interfacing/: LSM9DS1.cpp  LSM9DS1.h  Sensor_Board.h
Arm/drivers/Server/: FILTER.bat  FILTER.py  Server.py  Server_func.py  Server_test.py  Server_testf.py  Server_testtcp.py  close_com.py  new_butter.txt  server_test.bat  server_testf.bat  server_testtcp.bat
Arm/drivers/UART/: UART.cpp
Arm/drivers/mcp2515/: mcp2515.h
Arm/embedded/Assignment2_Sensor_Code/: CMakeLists.txt
Arm/embedded/Assignment2_Sensor_Code/src/: LSM9DS1.cpp
Arm/embedded/Assignment2_Sensor_Code/src/drivers/: LSM9DS1_Sensor_Global_Details.cpp  MPU6050.cpp  MPU6050.h  MPU9250_driver.cpp  MPU9250_driver.h
Arm/embedded/CAN_TEST/: CMakeLists.txt
Arm/embedded/CAN_TEST/src/: CAN_TEST.cpp
Arm/embedded/Ethan_test - Copy/src/: main.cpp
Arm/embedded/Ethan_test - Copy/src/SensorFusion/: FusionMath.h
Arm/embedded/Ethan_test - Copy/src/drivers/: LSM9DS1.h
Arm/embedded/Ethan_test/src/: Sensor_Board.h  main.cpp
Arm/embedded/Ethan_test/src/SensorFusion/: FusionOffset.h
Arm/embedded/Ethan_test/src/drivers/Leds/: Leds.cpp
Arm/embedded/Ethan_test/src/drivers/Microphone/: Microphone.cpp
Arm/embedded/Robot_Arm_2/: CMakeLists.txt
Arm/embedded/Robot_Arm_2/src/: main.cpp
Arm/embedded/Robot_Arm_2/src/SensorFusion/: LSM9DS1Headers.h  LSM9DS1_driver.cpp  LSM9DS1_driver.h
Arm/embedded/Test Code/: embedded - Shortcut.lnk
Arm/embedded/Test Code/Assignment2_Sensor_Code/src/: main.cpp
Arm/embedded/Test Code/Assignment2_Sensor_Code/src/SensorFusion/: FusionArhs.cpp  FusionAxes.h  FusionCalibration.h
Arm/embedded/Test Code/Assignment2_Sensor_Code/src/drivers/: LSM9DS1_Sensor_Global_Details.cpp  MPU6050.cpp
Arm/embedded/Test Code/CAN_TEST/: CMakeLists.txt
Arm/embedded/Test Code/CAN_TEST - Lach/src/: CAN_TEST.cpp
Arm/embedded/Test Code/CAN_TEST/src/: CAN_TEST.cpp
Arm/embedded/Test Code/CAN_TEST_send/: CMakeLists.txt
Arm/embedded/Test Code/CAN_TEST_send/src/: CAN_TEST_send.cpp
Arm/embedded/Test Code/Ethan_test - Copy/: CMakeLists.txt
Arm/embedded/Test Code/Ethan_test - Copy/src/SensorFusion/: Fusion.h  FusionCompass.cpp  FusionCompass.h  FusionOffset.cpp
Arm/embedded/Test Code/Ethan_test - Copy/src/drivers/: MPU6050.h  MPU9250_driver.cpp  MPU9250_driver.h
Arm/embedded/Test Code/Ethan_test/src/drivers/Leds/: Leds.h
Arm/embedded/Test Code/Robot_Arm_2/: CMakeLists.txt
Arm/embedded/Test Code/Robot_Arm_2/src/SensorFusion/: LSM9DS1Headers.h  LSM9DS1_driver.h
Arm/embedded/Test Code/esp32_arduino/: check.py  sdkconfig.old  wifi.txt
Arm/embedded/Test Code/rp2040_master_node/: CMakeLists.txt
Arm/embedded/Test Code/rp2040_master_node/src/: rp2040_master_node.cpp
Arm/embedded/esp32_arduino/scan-wifi-arduino-esp32s3/: scan-wifi-arduino-esp32s3.ino
Arm/embedded/esp32_master/: CMakeLists.txt  sdkconfig.old
Arm/embedded/esp32_master/main/: CMakeLists.txt  New Text Document.txt  esp32_master_main.c  esp32_master_main.cpp
Arm/embedded/rp2040_master_node/src/: rp2040_master_node.cpp
Arm/embedded/rp2040_node/: CMakeLists.txt
Arm/embedded/rp2040_node/src/: rp2040_node.cpp
Arm/movement/: main.py  reset.bat  reset_arm.py
Arm/movement/src/drivers/Server/: Server_func.py
Arm/vision/: CMakeLists.txt
Arm/vision/src/: Client.cpp  main.cpp  udp.cpp
Documentation/: Block Diagrampptx.pptx  CC3501 Technical Report Ethan Waters, Lachlan Pryce.docx  Design Choice Questions.txt  Other Documentation.txt  Report Week 5.docx  Weekly report example.docx  all_lp_data.csv  butteronly.csv  code diagram.pptx
Documentation/Filter data/: ANOVA RESULTS.CSV  butter_only.csv  lp_butter.csv  lp_only.csv  new_butter.csv  new_no_filt.csv  no_filter.csv  stats.R
Documentation/Weekly Reports/: Group 2 Ethan Lachlan Report Week 5.docx  Report Week 10.docx  Report Week 11.docx  Report Week 12.docx  Report Week 13.docx  Report Week 5 v1.docx  Report Week 5.docx  Report Week 6.docx  Report Week 7.docx  Report Week 8.docx  Report Week 9 Submission.docx  Report Week 9.docx
Embedded/: ESP32-C3FH4.IntLib
Embedded/IMU/: kalman_localiser.py
Embedded/SensorFusion/: calibrate_magnometer.py  mag_map.csv  mag_polynomal.txt  marg.py  marg_1_base.py
Embedded/SensorFusion/communication/: __init__.py  com_test.py  receiver.py  receiver_test.py
Embedded/SensorFusion/controller/: boat_log_27-Sep-2022 (22-40-37).txt
Embedded/SensorFusion/gpsfuser/: gpsKalmanFilter.py
Embedded/SensorFusion/prototyping/: all_filters.py  localiser.py  send_floats.py
Embedded_examples/IMU/: localiser.py
Embedded_examples/SensorFusion/: calibrate_sensor.py  gps.py  mapping_magnometer.py  marg_2_comms.py  read_magnometer.py
Embedded_examples/SensorFusion/CalibrationFiles/: MAG_CALIBRATION.json  TEST_CAL_1.json
Embedded_examples/SensorFusion/communication/: client.py  server.py
Embedded_examples/SensorFusion/controller/: autoboat.py
Embedded_examples/SensorFusion/gpsfuser/: gpsHelperMethods.py
Embedded_examples/SensorFusion/output/: output 27-Sep-2022 (22-32-12.191874).txt  output 27-Sep-2022 (22-33-12.086526).txt
Embedded_examples/SensorFusion/prototyping/: gps_reader.py  magwick_localiser.py  send_serial.py
Niryo_Examples/: Dummy_Code.py
(+3 files in other folders)
