cmake_minimum_required(VERSION 3.12)
project(vision)
set(CMAKE_CXX_STANDARD 20)
set(COMPILE_DEFINITIONS -O2 -Wall)
find_package(OpenCV REQUIRED)
add_executable(vision src/main.cpp)
target_link_libraries(vision ${OpenCV_LIBS})
target_include_directories(vision PRIVATE /home/esl/Documents/CC3501/Arm/drivers)